logs/dag_id=etl_premierleague_to_analisis/run_id=manual__2024-12-13T22:00:52.675197+00:00/task_id=transfer_ederson_logs/attempt=2.log
[2024-12-13T22:01:39.787+0000] {taskinstance.py:1103} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: etl_premierleague_to_analisis.transfer_ederson_logs manual__2024-12-13T22:00:52.675197+00:00 [queued]>
[2024-12-13T22:01:40.331+0000] {taskinstance.py:1103} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: etl_premierleague_to_analisis.transfer_ederson_logs manual__2024-12-13T22:00:52.675197+00:00 [queued]>
[2024-12-13T22:01:40.373+0000] {taskinstance.py:1308} INFO - Starting attempt 2 of 2
[2024-12-13T22:01:40.963+0000] {taskinstance.py:1327} INFO - Executing <Task(PythonOperator): transfer_ederson_logs> on 2024-12-13 22:00:52.675197+00:00
[2024-12-13T22:01:41.141+0000] {standard_task_runner.py:57} INFO - Started process 68017 to run task
[2024-12-13T22:01:41.234+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'etl_premierleague_to_analisis', 'transfer_ederson_logs', 'manual__2024-12-13T22:00:52.675197+00:00', '--job-id', '267', '--raw', '--subdir', 'DAGS_FOLDER/etl_premierleague_to_analisis.py', '--cfg-path', '/tmp/tmph5lg9a93']
[2024-12-13T22:01:41.428+0000] {standard_task_runner.py:85} INFO - Job 267: Subtask transfer_ederson_logs
[2024-12-13T22:01:43.880+0000] {task_command.py:410} INFO - Running <TaskInstance: etl_premierleague_to_analisis.transfer_ederson_logs manual__2024-12-13T22:00:52.675197+00:00 [running]> on host 653f470dc9b4
[2024-12-13T22:01:46.370+0000] {taskinstance.py:1545} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='etl_premierleague_to_analisis' AIRFLOW_CTX_TASK_ID='transfer_ederson_logs' AIRFLOW_CTX_EXECUTION_DATE='2024-12-13T22:00:52.675197+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-12-13T22:00:52.675197+00:00'
[2024-12-13T22:01:46.840+0000] {base.py:73} INFO - Using connection ID 'shared_postgres' for task execution.
[2024-12-13T22:01:46.942+0000] {sql.py:375} INFO - Running statement: SELECT Unnamed: 0, header_performance, header_pk, header_passes_launched, header_passes, header_goal_kicks, header_crosses_gk, header_sweeper, date, dayofweek, comp, round, venue, result, team, opponent, game_started, position, minutes, gk_shots_on_target_against, gk_goals_against, gk_saves, gk_save_pct, gk_clean_sheets, gk_psxg, gk_pens_att, gk_pens_allowed, gk_pens_saved, gk_pens_missed, gk_passes_completed_launched, gk_passes_launched, gk_passes_pct_launched, gk_passes, gk_passes_throws, gk_pct_passes_launched, gk_passes_length_avg, gk_goal_kicks, gk_pct_goal_kicks_launched, gk_goal_kick_length_avg, gk_crosses, gk_crosses_stopped, gk_crosses_stopped_pct, gk_def_actions_outside_pen_area, gk_avg_distance_def_actions, match_report FROM premierleague.public.ederson_logs, parameters: None
[2024-12-13T22:01:47.045+0000] {taskinstance.py:1824} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 181, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 198, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/etl_premierleague_to_analisis.py", line 35, in transfer_table_in_same_connection
    source_data = db_hook.get_records(source_query)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 235, in get_records
    return self.run(sql=sql, parameters=parameters, handler=fetch_all_handler)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ":"
LINE 1: SELECT Unnamed: 0, header_performance, header_pk, header_pas...
                      ^

[2024-12-13T22:01:47.299+0000] {taskinstance.py:1345} INFO - Marking task as FAILED. dag_id=etl_premierleague_to_analisis, task_id=transfer_ederson_logs, execution_date=20241213T220052, start_date=20241213T220139, end_date=20241213T220147
[2024-12-13T22:01:47.767+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 267 for task transfer_ederson_logs (syntax error at or near ":"
LINE 1: SELECT Unnamed: 0, header_performance, header_pk, header_pas...
                      ^
; 68017)
[2024-12-13T22:01:47.947+0000] {local_task_job_runner.py:225} INFO - Task exited with return code 1
[2024-12-13T22:01:48.321+0000] {taskinstance.py:2653} INFO - 0 downstream tasks scheduled from follow-on schedule check
